[tool.poetry]
name = "template_bot"
version = "0.1.0"
description = ""
authors = ["levch <levchenko.d.a1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.20"
aiogram-utils = "^0.1.4"
toml = "^0.10.2"
mongoengine = "^0.24.1"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
